client_react/src/components/ConversationWindow.css
/* Message Box */
.message-box
{
    min-width: 65%;
    max-width: 65%;
}

/* Member List */
.member-list
{
  /* Aligns the text to the right, also helps with the overflow */
  direction: rtl;
  text-align: start;

  /* Truncate Text */
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  padding-bottom: 5px;

  /* Apply a smooth transition to the member-list on hover */
  min-height: 27px;
  max-height: 27px;
  transition: max-height 0.8s ease-out;
}

.member-list:hover
{
  white-space: wrap;
  overflow: visible;
  padding-bottom: 5px;

  /* Apply a smooth transition to the member-list on hover */
  max-height: 50vh;
}


/* Conversation Window */
.conversation-window
{
  height: 100%;
  width: 100%;
  overflow-y: auto;
  display: flex;
  flex-direction: column;
}

.messages-container
{
  height: 100%;
  overflow-y: auto;
  display: flex;
  flex-direction: column;
  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
}

